Fix overflow and scroll style

--- a/src/app/pages/home/components/singles/singles.component.scss
+++ b/src/app/pages/home/components/singles/singles.component.scss
@@ -13,7 +13,7 @@
   ul {
     margin: 1em;
     list-style-type: none;
-    overflow: scroll;
+    overflow-y: scroll;
 
     li {
       line-height: 2em;
